--- a/mqtt.html
+++ b/mqtt.html
@@ -6,12 +6,19 @@
 </head>
 <body>
     <h2>MQTT WebSockets AI2</h2>
-    <button onclick="sendMQTT('device/relay', '1')">Bật Relay</button>
-    <button onclick="sendMQTT('device/relay', '0')">Tắt Relay</button>
+
+    <button onclick="sendMQTT('device/relay', '1')">🔌 Bật Relay</button>
+    <button onclick="sendMQTT('device/relay', '0')">⚫ Tắt Relay</button>
+
+    <button onclick="sendMQTT('device/door', '1')">🚪 Mở cửa</button>
+    <button onclick="sendMQTT('device/door', '0')">🔒 Đóng cửa</button>
+
     <h3>Dữ liệu cảm biến:</h3>
     <p id="temp">🌡️ Nhiệt độ: </p>
     <p id="humidity">💧 Độ ẩm: </p>
     <p id="gas">🔥 Khí gas: </p>
+    <p id="relayStatus">⚡ Relay: Đang cập nhật...</p>
+    <p id="doorStatus">🚪 Cửa: Đang cập nhật...</p>
 
     <script>
         const client = mqtt.connect('wss://6c419c1bacbf4ab783d8c915942de84b.s1.eu.hivemq.cloud:8884/mqtt', {
@@ -20,22 +27,23 @@
         });
 
         client.on('connect', () => {
-            console.log("✅ WebSocket MQTT Connected!");
             client.subscribe('sensor/temp');
             client.subscribe('sensor/humidity');
             client.subscribe('sensor/gas');
+            client.subscribe('device/relay');
+            client.subscribe('device/door');
         });
 
         function sendMQTT(topic, message) {
             client.publish(topic, message);
-            console.log(`📡 Sent MQTT: ${topic} → ${message}`);
         }
 
         client.on('message', (topic, message) => {
-            console.log(`🔥 Received MQTT: ${topic} → ${message.toString()}`);
             if (topic === "sensor/temp") document.getElementById("temp").innerText = `🌡️ Nhiệt độ: ${message}`;
             if (topic === "sensor/humidity") document.getElementById("humidity").innerText = `💧 Độ ẩm: ${message}`;
             if (topic === "sensor/gas") document.getElementById("gas").innerText = `🔥 Khí gas: ${message}`;
+            if (topic === "device/relay") document.getElementById("relayStatus").innerText = (message.toString() === "1") ? "🔌 Relay đang bật!" : "⚫ Relay đã tắt!";
+            if (topic === "device/door") document.getElementById("doorStatus").innerText = (message.toString() === "1") ? "🚪 Cửa đang mở!" : "🔒 Cửa đã đóng!";
         });
     </script>
 </body>
